# WarsOfNations

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: shader1.glsl
include/: export.h
include/engine/: engine.h
include/framework/: audio.h  packet.h  renderer.h  simple_rect_pack.h  socket.h  texture.h  window.h
include/game/: game.h  game_data.h  map.h  map_generator.h  protocol.h  server_client.h
include/network/: server_client.h
include/platform/: platform.h  platform_gl2.h  platform_glfw.h  platform_sdlNet.h  platform_winSock.h
src/: main.c
src/engine/: engine.c
src/framework/: audio.c  packet.c  sdl2.c  socket.c  texture.c
src/game/: client.c  game.c  game_data.c  map.c  map_generator.c  map_generator.h  protocol.c  protocol.h  server.c  server_client.h
src/network/: client.c  packet.c  packet.h  server.c  server.h  socket.c  socket.h
src/old/game/: framework.c  framework.h  game.h  game_data.c  map_generator.c  map_generator.h
src/old/network/: packet.c  packet.h  protocol.h  server.c  server_client.h  socket.c  socket.h
src/old/ui/: nuklear.c  nuklear2.c  ui.h
src/platform/: gl2.h  platform_core.c  platform_gl2.c  platform_glfw.c  platform_miniaudio.c  platform_sdlNet.c  platform_winSock.c
src/ui/: game_ui.c  game_ui.h  nuklear.c  ui.c  ui.h  ui_api.c  ui_api.h
